# fun-mcp-vibecoding-vs

./: PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: build-feature.prompt.md  code-commit.prompt.md  code-review.prompt.md  explain-code.prompt.md  version-control.prompt.md  vibe-coding.prompt.md  write-tests.prompt.md
.promptregistry/: critical_thinking_sparring_partner.json  critical_thinking_sparring_partner.md  devise-research-lineage.json  devise-research-lineage.md  devise-semantic-structure.json  devise-semantic-structure.md  explain-research-paper-three-pass.json  explain-research-paper-three-pass.md  map-research-field-landscape.json  map-research-field-landscape.md  simplify-dumb-down-topic.json  simplify-dumb-down-topic.md  study-path-notebooklm-material-gen.json  study-path-notebooklm-material-gen.md  study-path-through-papers.json  study-path-through-papers.md  study-path-video-audio-explainer.json  teach-research-paper-feynman.json  teach-research-paper-feynman.md
docs/: DBHUB_MCP.md  MCP_HUB.md  MCP_INTRO.md  MCP_USES.md  RESOURCES.md
mcphub/: README.md  mcp.json  start_mcp_hub.sh  start_ngrok.sh
src/: db_helper.py  load_pokemon_data.py  query_examples.py
